Finalizacion del proyecto[en vista mobile].

--- a/index.html
+++ b/index.html
@@ -33,22 +33,49 @@
           Summary
         </div>
         
-        <div class="summary__section">
-          <div class="summary__assets">
-          <img src="./assets/images/icon-reaction.svg" alt="reaction-icon">
-          Reaction</div>
-          <p><span class="summary_markdown">80</span> / 100</p>
+        <div class="summary__section summary__reaction">
+          <div class="flex-group">
+            <img src="./assets/images/icon-reaction.svg" alt="reaction-icon">
+            <p class="summary__assets">
+              Reaction</p>
+          </div>
+          <div class="text-content">
+            <p><b>80</b> <span class="text-sec">/ 100</span></p>
+          </div>
         </div>
 
-        <p>Memory
-          <span class="summary_markdown">92</span> / 100</p>
+        <div class="summary__section summary__memory">
+          <div class="flex-group">
+            <img src="./assets/images/icon-memory.svg" alt="reaction-icon">
+            <p class="summary__assets">
+              Memory</p>
+            </div>
+          <div class="text-content">
+            <p><b>92</b> <span class="text-sec">/ 100</span></p>
+          </div>
+          </div>
 
-        <p>Verbal
-          <span class="summary_markdown">61</span> / 100</p>
-          
-        <p>Visual
-          <span class="summary_markdown">72</span> / 100</p>
-      </div>
+        <div class="summary__section summary__verbal">
+          <div class="flex-group">
+            <img src="./assets/images/icon-verbal.svg" alt="reaction-icon">
+            <p class="summary__assets">
+              Verbal</p>
+          </div>
+          <div class="text-content">
+            <p><b>61</b> <span class="text-sec">/ 100</span></p>
+          </div>
+        </div>
+
+        <div class="summary__section summary__visual">
+          <div class="flex-group">
+            <img src="./assets/images/icon-visual.svg" alt="reaction-icon">
+            <p class="summary__assets">
+              Visual</p>
+          </div>
+          <div class="text-content">
+            <p><b>72</b> <span class="text-sec">/ 100</span></p>
+          </div>
+        </div>
 
       <button class="button">Continue</button>
     </div>
